[metadata]
name = edgetest-pip-tools
version = attr: edgetest_pip_tools.__version__
description = attr: edgetest_pip_tools.__description__
long_description = file: README.md, MAINTAINERS
author = attr: edgetest_pip_tools.__author__
author_email = attr: edgetest_pip_tools.__email__
maintainer = attr: edgetest_pip_tools.__author__
maintainer_email = attr: edgetest_pip_tools.__email__
url = attr: edgetest_pip_tools.__url__
python_requires =
    >=3.7.0
project_urls =
    Documentation = https://capitalone.github.io/edgetest-pip-tools/
    Bug Tracker = https://github.com/capitalone/edgetest-pip-tools/issues
    Source Code = https://github.com/capitalone/edgetest-pip-tools
classifiers =
    Intended Audience :: Everyone
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    edgetest
    pip-tools>=6.0.0,<=6.2.0

[options.extras_require]
docs =
    furo
    sphinx
    sphinx-copybutton
    sphinx-tabs
tests =
    coverage
    flake8
    mypy
    pydocstyle
    pytest
    pytest-cov
    tox-conda
qa =
    black
    isort
    pip-tools
    pre-commit
    pylint
    types-click
build =
    twine
dev =
    %(tests)s
    %(docs)s
    %(qa)s
    %(build)s

[options.entry_points]
edgetest =
    piptools = edgetest_pip_tools.plugin

[bumpver]
current_version = "2021.11.0"
version_pattern = "YYYY.MM.INC0"
commit_message = "Bump {old_version} to {new_version}"
commit = True

[bumpver:file_patterns]
docs/source/conf.py =
    version = "{version}"
setup.cfg =
    current_version = "{version}"
edgetest_pip_tools/__init__.py =
    __version__ = "{version}"

[aliases]
lint=pylint

[bdist_wheel]
python-tag = py37

[flake8]
max-line-length = 100
exclude = tests/*
max-complexity = 17
ignore = E203, W503

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
allow_redefinition = True

[pylint]
pylint_minimum_score = 9.5

[tool:pytest]
markers =
    unit: mark unit tests that do not require external interfaces and use mocking
    integration: mark test that interact with an external system
addopts = --verbose
